Updates from Overleaf

--- a/biblio_ptero.bib
+++ b/biblio_ptero.bib
@@ -5,6 +5,89 @@
 %====================================================================
 %                       IBM MODELS
 %====================================================================
+%healt research
+@article{Auchincloss2015Healthresearch,
+	doi = {10.1590/0102-311x00051615},
+	url = {https://doi.org/10.1590\%2F0102-311x00051615},
+	year = 2015,
+	month = {nov},
+	publisher = {{FapUNIFESP} ({SciELO})},
+	volume = {31},
+	number = {suppl 1},
+	pages = {65--78},
+	author = {Amy H. Auchincloss and Leandro Martin Totaro Garcia},
+	title = {Brief introductory guide to agent-based modeling and an illustration from urban health research},
+	journal = {Cadernos de Sa{\'{u}}de P{\'{u}}blica}
+}
+%fish
+@article{Werner1997Fish,
+	doi = {10.1016/s1385-1101(97)00024-5},
+	url = {https://doi.org/10.1016\%2Fs1385-1101\%2897\%2900024-5},
+	year = 1997,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {37},
+	number = {3-4},
+	pages = {195--212},
+	author = {Francisco E. Werner and John A. Quinlan and Brian O. Blanton and Richard A. Luettich},
+	title = {The role of hydrodynamics in explaining variability in fish populations},
+	journal = {Journal of Sea Research}
+}
+%Examples
+@article{Parada2003Anchovy,
+	doi = {10.1046/j.1365-2419.2003.00235.x},
+	url = {https://doi.org/10.1046\%2Fj.1365-2419.2003.00235.x},
+	year = 2003,
+	month = {may},
+	publisher = {Wiley},
+	volume = {12},
+	number = {3},
+	pages = {170--184},
+	author = {C. Parada and C.D. van der Lingen and C. Mullon and P. Penven},
+	title = {Modelling the effect of buoyancy on the transport of anchovy (Engraulis capensis) eggs from spawning to nursery grounds in the southern Benguela: an {IBM} approach},
+	journal = {Fisheries Oceanography}
+}
+
+
+%Desription of IBMs
+@article{Grimm2006ODD,
+title = {A standard protocol for describing individual-based and agent-based models},
+journal = {Ecological Modelling},
+volume = {198},
+number = {1},
+pages = {115 - 126},
+year = {2006},
+issn = {0304-3800},
+doi = {https://doi.org/10.1016/j.ecolmodel.2006.04.023},
+url = {http://www.sciencedirect.com/science/article/pii/S0304380006002043},
+author = {Volker Grimm and Uta Berger and Finn Bastiansen and Sigrunn Eliassen and Vincent Ginot and Jarl Giske and John Goss-Custard and Tamara Grand and Simone K. Heinz and Geir Huse and Andreas Huth and Jane U. Jepsen and Christian Jørgensen and Wolf M. Mooij and Birgit Müller and Guy Pe’er and Cyril Piou and Steven F. Railsback and Andrew M. Robbins and Martha M. Robbins and Eva Rossmanith and Nadja Rüger and Espen Strand and Sami Souissi and Richard A. Stillman and Rune Vabø and Ute Visser and Donald L. DeAngelis},
+}
+%Desription of IBMs update
+@article{Grimm2010UpdateODD,
+title = {The ODD protocol: A review and first update},
+journal = {Ecological Modelling},
+volume = {221},
+number = {23},
+pages = {2760 - 2768},
+year = {2010},
+issn = {0304-3800},
+doi = {https://doi.org/10.1016/j.ecolmodel.2010.08.019},
+url = {http://www.sciencedirect.com/science/article/pii/S030438001000414X},
+author = {Volker Grimm and Uta Berger and Donald L. DeAngelis and J. Gary Polhill and Jarl Giske and Steven F. Railsback},
+
+}
+@article{Grimm2020SecondUpdateODD,
+	doi = {10.18564/jasss.4259},
+	url = {https://doi.org/10.18564\%2Fjasss.4259},
+	year = 2020,
+	publisher = {Journal of Artificial Societies and Social Simulation},
+	volume = {23},
+	number = {2},
+	author = {Volker Grimm and Steven F. Railsback and Christian E. Vincenot and Uta Berger and Cara Gallagher and Donald L. DeAngelis and Bruce Edmonds and Jiaqi Ge and Jarl Giske and Jürgen Groeneveld and Alice S.A. Johnston and Alexander Milles and Jacob Nabe-Nielsen and J. Gareth Polhill and Viktoriia Radchuk and Marie-Sophie Rohwäder and Richard A. Stillman and Jan C. Thiele and Daniel Ayll{\'{o}}n},
+	title = {The {ODD} Protocol for Describing Agent-Based and Other Simulation Models: A Second Update to Improve Clarity, Replication, and Structural Realism},
+	journal = {Journal of Artificial Societies and Social Simulation}
+}
+
 %Separation into modules
 @article{Erguler2018Modules,
 	doi = {10.12688/f1000research.15824.1},
@@ -39,6 +122,38 @@
 	author = {Slawomir A. Lux},
 	title = {Individual-Based Modeling Approach to Assessment of the Impacts of Landscape Complexity and Climate on Dispersion, Detectability and Fate of Incipient Medfly Populations},
 	journal = {Frontiers in Physiology}
+}
+
+%Benefits of IBMs
+@article{Stillman2014BenefitsIBM,
+    author = {Stillman, Richard A. and Railsback, Steven F. and Giske, Jarl and Berger, Uta and Grimm, Volker},
+    title = "{Making Predictions in a Changing World: The Benefits of Individual-Based Ecology}",
+    journal = {BioScience},
+    volume = {65},
+    number = {2},
+    pages = {140-150},
+    year = {2014},
+    month = {12},
+    issn = {0006-3568},
+    doi = {10.1093/biosci/biu192},
+    url = {https://doi.org/10.1093/biosci/biu192},
+    eprint = {https://academic.oup.com/bioscience/article-pdf/65/2/140/8719099/biu192.pdf},
+}
+}
+%Zebrafish and toxicities
+@article{Beaudouin2015Zebra,
+	doi = {10.1371/journal.pone.0125841},
+	url = {https://doi.org/10.1371\%2Fjournal.pone.0125841},
+	year = 2015,
+	month = {may},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {10},
+	number = {5},
+	pages = {e0125841},
+	author = {R{\'{e}}my Beaudouin and Benoit Goussen and Benjamin Piccini and Starrlight Augustine and James Devillers and Fran{\c{c}}ois Brion and Alexandre R. R. P{\'{e}}ry},
+	editor = {Christopher Joseph Salice},
+	title = {An Individual-Based Model of Zebrafish Population Dynamics Accounting for Energy Dynamics},
+	journal = {{PLOS} {ONE}}
 }
 %IBM with individual adaptation
 @article{Clark2011IBMAdaptations,
@@ -115,6 +230,60 @@
 %====================================================================
 %                       PTEROPOD IBM PAPERS
 %====================================================================
+%DW to carbon for pteropoda OG
+@article{Omori1969DWCarbon,
+	doi = {10.1007/bf00355587},
+	url = {https://doi.org/10.1007\%2Fbf00355587},
+	year = 1969,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {3},
+	number = {1},
+	pages = {4--10},
+	author = {Makoto Omori},
+	title = {Weight and chemical composition of some important oceanic zooplankton in the North Pacific Ocean},
+	journal = {Marine Biology}
+}
+%DW to carbon summary
+@article{Larson1986Carbon,
+	doi = {10.1016/0022-0981(86)90231-5},
+	url = {https://doi.org/10.1016\%2F0022-0981\%2886\%2990231-5},
+	year = 1986,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {99},
+	number = {2},
+	pages = {107--120},
+	author = {R.J. Larson},
+	title = {Water content, organic content, and carbon and nitrogen composition of medusae from the northeast Pacific},
+	journal = {Journal of Experimental Marine Biology and Ecology}
+}
+%DW to WW
+@article{Davis1985DWandWW,
+	doi = {10.1029/jc090ic05p08871},
+	url = {https://doi.org/10.1029\%2Fjc090ic05p08871},
+	year = 1985,
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {90},
+	number = {C5},
+	pages = {8871},
+	author = {Cabell S. Davis and Peter H. Wiebe},
+	title = {Macrozooplankton biomass in a warm-core Gulf Stream ring: Time series changes in size structure, taxonomic composition, and vertical distribution},
+	journal = {Journal of Geophysical Research}
+}
+%Dry weight
+% @article{Bednarsek2012DryWeight,
+% 	doi = {10.1016/j.dsr2.2011.08.003},
+% 	url = {https://doi.org/10.1016\%2Fj.dsr2.2011.08.003},
+% 	year = 2012,
+% 	month = {jan},
+% 	publisher = {Elsevier {BV}},
+% 	volume = {59-60},
+% 	pages = {105--116},
+% 	author = {N. Bednar{\v{s}}ek and G.A. Tarling and S. Fielding and D.C.E. Bakker},
+% 	title = {Population dynamics and biogeochemical significance of Limacina helicina antarctica in the Scotia Sea (Southern Ocean)},
+% 	journal = {Deep Sea Research Part {II}: Topical Studies in Oceanography}
+% }
 %lipid storages
 @article{Maas2020Lipids,
 	doi = {10.1016/j.pocean.2020.102371},
@@ -185,7 +354,7 @@
 	journal = {Journal of Zoology}
 }
 
-%overwintering
+%overwintering % size
 @article{Gannefors2005Overwintering,
 	doi = {10.1007/s00227-004-1544-y},
 	url = {https://doi.org/10.1007\%2Fs00227-004-1544-y},
@@ -199,7 +368,19 @@
 	title = {The Arctic sea butterfly Limacina helicina: lipids and life strategy},
 	journal = {Marine Biology}
 }
-
+%size
+@article{Kobayashi1974Growth,
+	doi = {10.1007/bf00391513},
+	url = {https://doi.org/10.1007\%2Fbf00391513},
+	year = 1974,
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {26},
+	number = {4},
+	pages = {295--301},
+	author = {H. A. Kobayashi},
+	title = {Growth cycle and related vertical distribution of the thecosomatous pteropod Spiratella (?Limacina?) helicina in the central Arctic Ocean},
+	journal = {Marine Biology}
+}
 
 %Traits of zooplankton 
 @article{Litchman2013traits,
@@ -219,7 +400,7 @@
 %Unbeaching
 @article{Delandmeter2019Unbeaching,
 	doi = {10.5194/gmd-2018-339-ac2},
-	url = {https://doi.org/10.5194%2Fgmd-2018-339-ac2},
+	url = {https://doi.org/10.5194\%2Fgmd-2018-339-ac2},
 	year = 2019,
 	month = {apr},
 	publisher = {Copernicus {GmbH}},
@@ -227,6 +408,36 @@
 	title = {The Parcels v2.0 Lagrangian framework: new field interpolation schemes}
 }
 
+
+
+%choaling of euphotic zone in CalCS
+@article{Aksnesa2009ShoalingEuphotic,
+	doi = {10.4319/lo.2009.54.4.1272},
+	url = {https://doi.org/10.4319\%2Flo.2009.54.4.1272},
+	year = 2009,
+	month = {may},
+	publisher = {Wiley},
+	volume = {54},
+	number = {4},
+	pages = {1272--1281},
+	author = {Dag L. Aksnesa and Mark D. Ohman},
+	title = {Multi-decadal shoaling of the euphotic zone in the southern sector of the California Current System},
+	journal = {Limnology and Oceanography}
+}
+%DVM and light/phytoplankton biomass
+@article{Ohman2016DVMLight,
+	doi = {10.1002/lno.10251},
+	url = {https://doi.org/10.1002\%2Flno.10251},
+	year = 2016,
+	month = {dec},
+	publisher = {Wiley},
+	volume = {61},
+	number = {2},
+	pages = {765--770},
+	author = {Mark D. Ohman and Jean-Baptiste Romagnan},
+	title = {Nonlinear effects of body size and optical attenuation on Diel Vertical Migration by zooplankton},
+	journal = {Limnology and Oceanography}
+}
 %Global DVM patterns (Timing of DVM)
 @article{Bianchi2015GlobalDVM,
 	doi = {10.1002/lno.10219},
@@ -356,6 +567,33 @@
   abstract={No abstract is available for this item.},
   url={https://ideas.repec.org/a/wfi/wfbyte/39518.html}
 }
+
+@incollection{pauly2013ELEFAN,
+  author       = {Daniel Pauly}, 
+  title        = {The {ELEFAN} system for analysis of length-frequency data from fish and aquatic invertebrate populations},
+  booktitle    = {ELEFAN in R: a new tool for length-frequency analysis},
+  publisher    = {Fisheries Centre Research Reports 21(3)},
+  year         = 2013,
+  editor       = {Pauly, Daniel and Greenberg, Aaron},
+  pages        = {1-25},
+  issn         = {1198-6727},
+  address      = {Fisheries Center, University of British Columbia, Canada}
+}
+
+@article{GarciaBerthou2012Growth,
+	doi = {10.1007/s11160-012-9262-x},
+	url = {https://doi.org/10.1007\%2Fs11160-012-9262-x},
+	year = 2012,
+	month = {mar},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {22},
+	number = {3},
+	pages = {635--640},
+	author = {Emili Garc{\'{\i}}a-Berthou and Gerard Carmona-Catot and Roberto Merciai and Derek H. Ogle},
+	title = {A technical note on seasonal growth models},
+	journal = {Reviews in Fish Biology and Fisheries}
+}
+
 %Life-stages
 @article{Thabet2015Lifestages,
 	doi = {10.1007/s00227-015-2754-1},
@@ -370,6 +608,23 @@
 	title = {Life cycle and early development of the thecosomatous pteropod Limacina retroversa in the Gulf of Maine, including the effect of elevated {CO}2 levels},
 	journal = {Marine Biology}
 }
+
+%longevity
+@article{Bednarsek2012Population,
+	doi = {10.1016/j.dsr2.2011.08.003},
+	url = {https://doi.org/10.1016\%2Fj.dsr2.2011.08.003},
+	year = 2012,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {59-60},
+	pages = {105--116},
+	author = {N. Bednar{\v{s}}ek and G.A. Tarling and S. Fielding and D.C.E. Bakker},
+	title = {Population dynamics and biogeochemical significance of Limacina helicina antarctica in the Scotia Sea (Southern Ocean)},
+	journal = {Deep Sea Research Part {II}: Topical Studies in Oceanography}
+}
+
+
+
 %Fecundity and acidification
 @article{Manno2016EggsAcidification,
 	doi = {10.1038/srep25752},
@@ -422,6 +677,34 @@
 	title = {Response of the Arctic Pteropod Limacina helicina to Projected Future Environmental Conditions},
 	journal = {{PLoS} {ONE}}
 }
+
+%Metabolic cost
+@article{Peck2018CounterDamage,
+	doi = {10.1038/s41467-017-02692-w},
+	url = {https://doi.org/10.1038\%2Fs41467-017-02692-w},
+	year = 2018,
+	month = {jan},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {9},
+	number = {1},
+	author = {Victoria L. Peck and Rosie L. Oakes and Elizabeth M. Harper and Clara Manno and Geraint A. Tarling},
+	title = {Pteropods counter mechanical damage and dissolution through extensive shell repair},
+	journal = {Nature Communications}
+}
+@article{Lischka2016MetabolicCost,
+	doi = {10.1007/s00300-016-2044-5},
+	url = {https://doi.org/10.1007\%2Fs00300-016-2044-5},
+	year = 2016,
+	month = {oct},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {40},
+	number = {6},
+	pages = {1211--1227},
+	author = {Silke Lischka and Ulf Riebesell},
+	title = {Metabolic response of Arctic pteropods to ocean acidification and warming during the polar night/twilight phase in Kongsfjord (Spitsbergen)},
+	journal = {Polar Biology}
+}
+
 %Shell-less pteropods, malformations, and increase in predation
 @article{Comeau2010Predation,
 	doi = {10.1007/s00227-010-1493-6},
@@ -453,6 +736,32 @@
 	title = {Nonlinear alignment and averaging for estimating the evoked potential},
 	journal = {{IEEE} Transactions on Biomedical Engineering}
 }
+%DTW package
+@article{giorgino2009computing,
+  title={Computing and visualizing dynamic time warping alignments in R: the dtw package},
+  author={Toni Giorgino},
+  journal={Journal of statistical Software},
+  volume={31},
+  number={7},
+  pages={1--24},
+  year={2009},
+  doi={10.18637/jss.v031.i07}
+}
+%Numpy
+@book{oliphant2006guide,
+  title={A guide to NumPy},
+  author={Oliphant, Travis E},
+  volume={1},
+  year={2006},
+  publisher={Trelgol Publishing USA}
+} 
+%astral
+@manual{astral2020,
+      title  = "Astral v2.2",
+      author = "Simon Kennedy",
+      url    = "https://astral.readthedocs.io/en/latest/index.html",
+      year   = "2020 (accessed August 4, 2020)"
+    }
 %Vertical distribution
 
 
@@ -461,6 +770,200 @@
 %====================================================================
 %                       PTEROPODS/ZOOPLANKTON vs THE ENVIRONMENT
 %====================================================================
+%Multi decadal study
+@article{Ohman2009Multi,
+	doi = {10.1029/2009gl039901},
+	url = {https://doi.org/10.1029\%2F2009gl039901},
+	year = 2009,
+	month = {sep},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {36},
+	number = {18},
+	author = {Mark D. Ohman and Bertha E. Lavaniegos and Annie W. Townsend},
+	title = {Multi-decadal variations in calcareous holozooplankton in the California Current System: Thecosome pteropods, heteropods, and foraminifera},
+	journal = {Geophysical Research Letters}
+}
+@article{Mackas2011Timeseries,
+	doi = {10.1093/icesjms/fsr163},
+	url = {https://doi.org/10.1093\%2Ficesjms\%2Ffsr163},
+	year = 2011,
+	month = {oct},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {69},
+	number = {3},
+	pages = {448--459},
+	author = {David L. Mackas and Moira D. Galbraith},
+	title = {Pteropod time-series from the {NE} Pacific},
+	journal = {{ICES} Journal of Marine Science}
+}
+%Challenges in attribution of OA on marine ecosystems
+@article{Doo2020Attribution,
+	doi = {10.1093/icesjms/fsaa094},
+	url = {https://doi.org/10.1093\%2Ficesjms\%2Ffsaa094},
+	year = 2020,
+	month = {aug},
+	publisher = {Oxford University Press ({OUP})},
+	author = {Steve S Doo and Andrea Kealoha and Andreas Andersson and Anne L Cohen and Tacey L Hicks and Zackary I Johnson and Matthew H Long and Paul McElhany and Nathaniel Mollica and Kathryn E F Shamberger and Nyssa J Silbiger and Yuichiro Takeshita and D Shallin Busch},
+	editor = {Howard Browman},
+	title = {The challenges of detecting and attributing ocean acidification impacts on marine ecosystems},
+	journal = {{ICES} Journal of Marine Science}
+}
+%Uncertainties lab and field
+@article{Busch2015Uncertainties,
+	doi = {10.5670/oceanog.2015.29},
+	url = {https://doi.org/10.5670\%2Foceanog.2015.29},
+	year = 2015,
+	month = {jun},
+	publisher = {The Oceanography Society},
+	volume = {25},
+	number = {2},
+	pages = {30--39},
+	author = {D. Shallin Busch and   and Michael O{\textquotesingle}Donnell and Claudine Hauri and Katharine Mach and Matthew Poach and Scott Doney and Sergio Signorini},
+	title = {Understanding, Characterizing, and Communicating Responses to Ocean Acidification: Challenges and Uncertainties},
+	journal = {Oceanography}
+}
+%Trends in abundance from time series studies
+
+@article{Head2010NWAtlantic,
+	doi = {10.1093/plankt/fbq090},
+	url = {https://doi.org/10.1093\%2Fplankt\%2Ffbq090},
+	year = 2010,
+	month = {jul},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {32},
+	number = {12},
+	pages = {1633--1648},
+	author = {Erica J. H. Head and Pierre Pepin},
+	title = {Spatial and inter-decadal variability in plankton abundance and composition in the Northwest Atlantic (1958-2006)},
+	journal = {Journal of Plankton Research}
+}
+@article{Beare2013NorthSea,
+	doi = {10.1371/journal.pone.0061175},
+	url = {https://doi.org/10.1371\%2Fjournal.pone.0061175},
+	year = 2013,
+	month = {may},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {8},
+	number = {5},
+	pages = {e61175},
+	author = {Doug Beare and Abigail McQuatters-Gollop and Tessa van der Hammen and Marcel Machiels and Shwu Jiau Teoh and Jason M. Hall-Spencer},
+	editor = {Sam Dupont},
+	title = {Long-Term Trends in Calcifying Plankton and {pH} in the North Sea},
+	journal = {{PLoS} {ONE}}
+}
+@article{Beaugrand2012NAtlantic,
+	doi = {10.1038/nclimate1753},
+	url = {https://doi.org/10.1038\%2Fnclimate1753},
+	year = 2012,
+	month = {dec},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {3},
+	number = {3},
+	pages = {263--267},
+	author = {Gregory Beaugrand and Abigail McQuatters-Gollop and Martin Edwards and Eric Goberville},
+	title = {Long-term responses of North Atlantic calcifying plankton to climate change},
+	journal = {Nature Climate Change}
+}
+@article{Thibodeau2018WAP,
+	doi = {10.1002/lno.11041},
+	url = {https://doi.org/10.1002\%2Flno.11041},
+	year = 2018,
+	month = {oct},
+	publisher = {Wiley},
+	volume = {64},
+	number = {S1},
+	author = {P. S. Thibodeau and D. K. Steinberg and S. E. Stammerjohn and C. Hauri},
+	title = {Environmental controls on pteropod biogeography along the Western Antarctic Peninsula},
+	journal = {Limnology and Oceanography}
+}
+%pH variability
+@article{Hofmann2011Variability,
+    author = {Hofmann, Gretchen E. AND Smith, Jennifer E. AND Johnson, Kenneth S. AND Send, Uwe AND Levin, Lisa A. AND Micheli, Fiorenza AND Paytan, Adina AND Price, Nichole N. AND Peterson, Brittany AND Takeshita, Yuichiro AND Matson, Paul G. AND Crook, Elizabeth Derse AND Kroeker, Kristy J. AND Gambi, Maria Cristina AND Rivest, Emily B. AND Frieder, Christina A. AND Yu, Pauline C. AND Martz, Todd R.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {High-Frequency Dynamics of Ocean pH: A Multi-Ecosystem Comparison},
+    year = {2011},
+    month = {12},
+    volume = {6},
+    url = {https://doi.org/10.1371/journal.pone.0028983},
+    pages = {1-11},
+    number = {12},
+    doi = {10.1371/journal.pone.0028983}
+}
+%from lab to population
+@article{Andersson2015LabPopulation,
+	doi = {10.5670/oceanog.2015.27},
+	url = {https://doi.org/10.5670\%2Foceanog.2015.27},
+	year = 2015,
+	month = {jun},
+	publisher = {The Oceanography Society},
+	volume = {25},
+	number = {2},
+	pages = {16--27},
+	author = {Andreas Andersson and   and David Kline and Peter Edmunds and Stephen Archer and Nina Bednar{\v{s}}ek and Robert Carpenter and Meg Chadsey and Philip Goldstein and Andrea Grottoli and Thomas Hurst and Andrew King and Janet Kübler and Ilsa Kuffner and Katherine Mackey and Bruce Menge and Adina Paytan and Ulf Riebesell and Astrid Schnetzer and Mark Warner and Richard Zimmerman and},
+	title = {Understanding Ocean Acidification Impacts on Organismal to Ecological Scales},
+	journal = {Oceanography}
+%Impact on larvae and early stages
+@article{Ross2011early,
+	doi = {10.3390/w3041005},
+	url = {https://doi.org/10.3390\%2Fw3041005},
+	year = 2011,
+	month = {nov},
+	publisher = {{MDPI} {AG}},
+	volume = {3},
+	number = {4},
+	pages = {1005--1030},
+	author = {Pauline M. Ross and Laura Parker and Wayne A. O'Connor and Elizabeth A. Bailey},
+	title = {The Impact of Ocean Acidification on Reproduction, Early Development and Settlement of Marine Organisms},
+	journal = {Water}
+}
+%Unknowns in OA impacts
+@article{Busch2016directEffects,
+	doi = {10.1371/journal.pone.0160669},
+	url = {https://doi.org/10.1371\%2Fjournal.pone.0160669},
+	year = 2016,
+	month = {aug},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {11},
+	number = {8},
+	pages = {e0160669},
+	author = {D. Shallin Busch and Paul McElhany},
+	editor = {Christopher J. Gobler},
+	title = {Estimates of the Direct Effect of Seawater {pH} on the Survival Rate of Species Groups in the California Current Ecosystem},
+	journal = {{PLOS} {ONE}}
+}
+%The other CO2 problem
+@article{Doney2009OtherCO2,
+author = {Doney, Scott C. and Fabry, Victoria J. and Feely, Richard A. and Kleypas, Joan A.},
+title = {Ocean Acidification: The Other CO2 Problem},
+journal = {Annual Review of Marine Science},
+volume = {1},
+number = {1},
+pages = {169-192},
+year = {2009},
+doi = {10.1146/annurev.marine.010908.163834},
+note ={PMID: 21141034},
+URL = {https://doi.org/10.1146/annurev.marine.010908.163834},
+eprint = {https://doi.org/10.1146/annurev.marine.010908.163834},
+}
+
+
+
+%dissolution and pteropods/environment
+@article{Wall_Palmer2013dissolution,
+	doi = {10.1016/j.quascirev.2013.09.019},
+	url = {https://doi.org/10.1016\%2Fj.quascirev.2013.09.019},
+	year = 2013,
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {81},
+	pages = {29--34},
+	author = {Deborah Wall-Palmer and Christopher W. Smart and Malcolm B. Hart},
+	title = {In-life pteropod shell dissolution as an indicator of past ocean carbonate saturation},
+	journal = {Quaternary Science Reviews}
+}
+
+
 @article{Howes2014Lab,
 	doi = {10.1093/plankt/fbu002},
 	url = {https://doi.org/10.1093\%2Fplankt\%2Ffbu002},
@@ -474,6 +977,7 @@
 	title = {Sink and swim: a status review of thecosome pteropod culture techniques},
 	journal = {Journal of Plankton Research}
 }
+
 
 
 %limacina helicina vs acidification in the CalCS
@@ -629,7 +1133,7 @@
 @article{Gardner2017SouthernOceanPteropods,
 	doi = {10.1007/s00227-017-3261-3},
 	url = {https://doi.org/10.1007\%2Fs00227-017-3261-3},
-	year = 2017,
+	year = 2018,
 	month = {nov},
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {165},
@@ -692,6 +1196,21 @@
 	title = {Zooplankton time series in the coastal zone off Chile: Variation in upwelling and responses of the copepod community},
 	journal = {Progress in Oceanography}
 }
+%Species and DVM
+@article{Mackas2005DVM,
+	doi = {10.1016/j.dsr2.2005.02.008},
+	url = {https://doi.org/10.1016\%2Fj.dsr2.2005.02.008},
+	year = 2005,
+	month = {apr},
+	publisher = {Elsevier {BV}},
+	volume = {52},
+	number = {7-8},
+	pages = {1011--1035},
+	author = {D.L. Mackas and M. Tsurumi and M.D. Galbraith and D.R. Yelland},
+	title = {Zooplankton distribution and dynamics in a North Pacific Eddy of coastal origin: {II}. Mechanisms of eddy colonization by and retention of offshore species},
+	journal = {Deep Sea Research Part {II}: Topical Studies in Oceanography}
+}
+
 %Metabolic suppresion in OMZ and low temperature and their effect on shell dissolution during DVM
 @article{Maas2012DVM,
 	doi = {10.5194/bg-9-747-2012},
@@ -759,7 +1278,7 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 	number = {12},
 	pages = {3888--3900},
 	author = {Aurelie Moya and Ella L. Howes and Thomas Lacoue-Labarthe and Sylvain For{\^{e}}t and Bishoy Hanna and M{\'{o}}nica Medina and Philip L. Munday and Jue-Sheng Ong and Jean-Louis Teyssi{\'{e}} and Gergely Torda and Sue-Ann Watson and David J. Miller and Jelle Bijma and Jean-Pierre Gattuso},
-	title = {Near-future {pH} conditions severely impact calcification, metabolism and the nervous system in the {pteropodHeliconoides} inflatus},
+	title = {Near-future {pH} conditions severely impact calcification, metabolism and the nervous system in the {pteropod Heliconoides} inflatus},
 	journal = {Global Change Biology}
 }
 %====================================================================
@@ -875,6 +1394,21 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 	title = {Pteropods in Southern Ocean ecosystems},
 	journal = {Progress in Oceanography}
 }
+%link lower trophic levels and fish yields
+@article{ware2005bottom,
+	doi = {10.1126/science.1109049},
+	url = {https://doi.org/10.1126\%2Fscience.1109049},
+	year = 2005,
+	month = {may},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {308},
+	number = {5726},
+	pages = {1280--1284},
+	author = {D. M. Ware},
+	title = {Bottom-Up Ecosystem Trophic Dynamics Determine Fish Production in the Northeast Pacific},
+	journal = {Science}
+}
+
 %Protein humans
 @article{Chassot2010Protein,
 	doi = {10.1111/j.1461-0248.2010.01443.x},
@@ -997,9 +1531,7 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 	number = {3},
 	pages = {458--468},
 	author = {Erik T. Buitenhuis and Corinne Le Qu{\'{e}}r{\'{e}} and Nina Bednar{\v{s}}ek and Ralf Schiebel},
-	title = {Large Contribution of Pteropods to Shallow {CaCO}
-		            3
-		            Export},
+	title = {Large Contribution of Pteropods to Shallow {CaCO}3 Export},
 	journal = {Global Biogeochemical Cycles}
 }
 %Deoxygenation in eddies and carbon flux
@@ -1045,6 +1577,81 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 	title = {Biomass changes and trophic amplification of plankton in a warmer ocean},
 	journal = {Global Change Biology}
 }
+%====================================================================
+%                       ROMS
+%====================================================================
+%BEC
+@article{moore2013marine,
+ doi = {10.1175/jcli-d-12-00566.1},
+	url = {https://doi.org/10.1175\%2Fjcli-d-12-00566.1},
+	year = 2013,
+	month = {dec},
+	publisher = {American Meteorological Society},
+	volume = {26},
+	number = {23},
+	pages = {9291--9312},
+	author = {J. Keith Moore and Keith Lindsay and Scott C. Doney and Matthew C. Long and Kazuhiro Misumi},
+	title = {Marine Ecosystem Dynamics and Biogeochemical Cycling in the Community Earth System Model [{CESM}1({BGC})]: Comparison of the 1990s with the 2090s under the {RCP}4.5 and {RCP}8.5 Scenarios},
+	journal = {Journal of Climate}
+}
+%USCLA-ETH ROMS
+@article{shchepetkin2005regional,
+  doi = {10.1016/j.ocemod.2004.08.002},
+	url = {https://doi.org/10.1016\%2Fj.ocemod.2004.08.002},
+	year = 2005,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {9},
+	number = {4},
+	pages = {347--404},
+	author = {Alexander F. Shchepetkin and James C. McWilliams},
+	title = {The regional oceanic modeling system ({ROMS}): a split-explicit, free-surface, topography-following-coordinate oceanic model},
+	journal = {Ocean Modelling}
+}
+%Frischknecht ROMS CalCS
+@article{frischknecht2015remote,
+  doi = {10.1002/2014jc010531},
+	url = {https://doi.org/10.1002\%2F2014jc010531},
+	year = 2015,
+	month = {feb},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {120},
+	number = {2},
+	pages = {1353--1374},
+	author = {M. Frischknecht and M. M\"{u}nnich and N. Gruber},
+	title = {Remote versus local influence of {ENSO} on the California Current System},
+	journal = {Journal of Geophysical Research: Oceans}
+}
+
+@article{frischknecht2017local,
+  doi = {10.1002/2016gl071316},
+	url = {https://doi.org/10.1002\%2F2016gl071316},
+	year = 2017,
+	month = {jan},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {44},
+	number = {1},
+	pages = {304--311},
+	author = {Martin Frischknecht and Matthias M\"{u}nnich and Nicolas Gruber},
+	title = {Local atmospheric forcing driving an unexpected California Current System response during the 2015-2016 El Ni{\~{n}}o},
+	journal = {Geophysical Research Letters}
+}
+
+@article{frischknecht2018origin,
+  doi = {10.1029/2018jc013934},
+	url = {https://doi.org/10.1029\%2F2018jc013934},
+	year = 2018,
+	month = {nov},
+	publisher = {American Geophysical Union ({AGU})},
+	volume = {123},
+	number = {11},
+	pages = {7939--7962},
+	author = {M. Frischknecht and M. M\"{u}nnich and N. Gruber},
+	title = {Origin, Transformation, and Fate: The Three-Dimensional Biological Pump in the California Current System},
+	journal = {Journal of Geophysical Research: Oceans}
+}
+
+
 
 
 %====================================================================
@@ -1125,10 +1732,27 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
 %====================================================================
 %               ACIDIFICATION (REGIONAL AND GLOBAL)
 %====================================================================
+%Shoaling of corrosive waters
+@article {Feely2008Shoaling,
+	author = {Feely, Richard A. and Sabine, Christopher L. and Hernandez-Ayon, J. Martin and Ianson, Debby and Hales, Burke},
+	title = {Evidence for Upwelling of Corrosive "Acidified" Water onto the Continental Shelf},
+	volume = {320},
+	number = {5882},
+	pages = {1490--1492},
+	year = {2008},
+	doi = {10.1126/science.1155676},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/320/5882/1490},
+	eprint = {https://science.sciencemag.org/content/320/5882/1490.full.pdf},
+	journal = {Science}
+}
+
+
 %Protoconch dissolution
 @article{Johnson2016,
 	doi = {10.5194/bg-2016-467},
-	url = {https://doi.org/10.5194%2Fbg-2016-467},
+	url = {https://doi.org/10.5194\%2Fbg-2016-467},
 	year = 2016,
 	month = {nov},
 	publisher = {Copernicus {GmbH}},
