Added figure to represent growth and life stages with developmental timings

--- a/biblio_ptero.bib
+++ b/biblio_ptero.bib
@@ -271,19 +271,7 @@ author = {Volker Grimm and Uta Berger and Donald L. DeAngelis and J. Gary Polhil
 	title = {Macrozooplankton biomass in a warm-core Gulf Stream ring: Time series changes in size structure, taxonomic composition, and vertical distribution},
 	journal = {Journal of Geophysical Research}
 }
-%Dry weight
-% @article{Bednarsek2012DryWeight,
-% 	doi = {10.1016/j.dsr2.2011.08.003},
-% 	url = {https://doi.org/10.1016\%2Fj.dsr2.2011.08.003},
-% 	year = 2012,
-% 	month = {jan},
-% 	publisher = {Elsevier {BV}},
-% 	volume = {59-60},
-% 	pages = {105--116},
-% 	author = {N. Bednar{\v{s}}ek and G.A. Tarling and S. Fielding and D.C.E. Bakker},
-% 	title = {Population dynamics and biogeochemical significance of Limacina helicina antarctica in the Scotia Sea (Southern Ocean)},
-% 	journal = {Deep Sea Research Part {II}: Topical Studies in Oceanography}
-% }
+
 %lipid storages
 @article{Maas2020Lipids,
 	doi = {10.1016/j.pocean.2020.102371},
@@ -903,6 +891,7 @@ author = {Volker Grimm and Uta Berger and Donald L. DeAngelis and J. Gary Polhil
 	author = {Andreas Andersson and   and David Kline and Peter Edmunds and Stephen Archer and Nina Bednar{\v{s}}ek and Robert Carpenter and Meg Chadsey and Philip Goldstein and Andrea Grottoli and Thomas Hurst and Andrew King and Janet Kübler and Ilsa Kuffner and Katherine Mackey and Bruce Menge and Adina Paytan and Ulf Riebesell and Astrid Schnetzer and Mark Warner and Richard Zimmerman and},
 	title = {Understanding Ocean Acidification Impacts on Organismal to Ecological Scales},
 	journal = {Oceanography}
+	}
 %Impact on larvae and early stages
 @article{Ross2011early,
 	doi = {10.3390/w3041005},
@@ -1444,8 +1433,8 @@ keywords = {ocean acidification, pteropods, salinity, carbonate, high latitude, 
     address = {Dordrecht},
     pages = {357--369},
     isbn = {978-1-4020-8278-8},
-    doi = {"10.1007/978-1-4020-8278-8_32},
-    url = {"https://doi.org/10.1007/978-1-4020-8278-8_32}
+    doi = {10.1007/978-1-4020-8278-8_32},
+    url = {https://doi.org/10.1007/978-1-4020-8278-8_32}
 }
 
 
